fix: misaligned title (#283)

--- a/Client/src/app/app.component.scss
+++ b/Client/src/app/app.component.scss
@@ -14,7 +14,7 @@
   .button-container {
 
     position: absolute;
-    top: -50px;
+    top: -56px;
     right: 8px;
     height: 100%;
     min-height: 100vh;
