--- a/Client/src/styles/_themed-parts.scss
+++ b/Client/src/styles/_themed-parts.scss
@@ -16,7 +16,8 @@
   // ANGULAR MATERIAL OVERRIDES
 
   // TOOLBAR
-  .main-toolbar {
+  .main-toolbar,
+  .mat-toolbar-single-row {
 
     background-color: transparent;
 
@@ -28,10 +29,9 @@
     max-width: $maxwidth;
     margin-left: auto;
     margin-right: auto;
-    padding: 0 9px;
+    padding: 0 8px;
 
     a {
-      font-family: "Google Sans", Roboto, Arial, Helvetica, sans-serif;
       text-decoration: none;
       color: inherit;
 
@@ -44,8 +44,10 @@
 
   // MAIN FOOTER
   .footer {
-    padding: 1rem 9px;
+    padding: 1rem 8px;
     margin-top: 3rem;
+    margin-bottom: 3rem;
+
     text-align: center;
     color: mat.get-color-from-palette($accent, 600);
 
